<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewShoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/shoe_name"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeName"
                app:layout_constraintStart_toStartOf="@+id/editTextShoeName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/editTextShoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter shoe name"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/textViewCompany"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewShoeName" />

            <TextView
                android:id="@+id/textViewCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/company"
                app:layout_constraintBottom_toTopOf="@+id/editTextCompany"
                app:layout_constraintStart_toStartOf="@+id/editTextCompany"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter company name"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/textViewShoeSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCompany" />

            <TextView
                android:id="@+id/textViewShoeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/shoe_size"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

            <EditText
                android:id="@+id/editTextNumberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter shoe size"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewShoeSize" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Description"
                app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                app:layout_constraintStart_toStartOf="@+id/editTextDescription"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter description"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/buttonSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonSave" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonCancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>